添加目录；修改图片

--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
   </head>
 
   <body>
-    <h1>许巍</h1>
+    <ol>
+      <li><a href="#name">个人简介</a></li>
+      <li><a href="#events">重要事件</a></li>
+      <li><a href="#awards">成就和荣誉</a></li>
+      <li><a href="#works">主要作品</a></li>
+      <li><a href="#pictures">生活照</a></li>
+      <li><a href="#life">生平</a></li>
+    </ol>
+    <h1 id="name">许巍</h1>
     <p>原名许玮，生于中国陕西西安，中国音乐人</p>
-    <h2>重要事件</h2>
+    <h2 id="events">重要事件</h2>
     <ul>
       <li>1997年4月，许巍发布首张个人专辑《在别处》</li>
       <li>2000年11月，第二张专辑《那一年》发行</li>
@@ -24,7 +32,7 @@
         2005年8月13日许巍在北京工人体育馆举办了个人首场演唱会《留声十年绝版青春》
       </li>
     </ul>
-    <h2>成就和荣誉</h2>
+    <h2 id="awards">成就和荣誉</h2>
     <ul>
       <li>2004年，获最佳男歌手</li>
       <li>2004年，获最佳创作歌手(内地)</li>
@@ -32,7 +40,7 @@
       <li>2006年，获内地最佳男歌手</li>
       <li>2015年，获第19届最佳男歌手(内地)</li>
     </ul>
-    <h2>主要作品</h2>
+    <h2 id="works">主要作品</h2>
     <table>
       <thead>
         <tr>
@@ -75,11 +83,11 @@
         </tr>
       </tbody>
     </table>
-    <h2>生活照</h2>
+    <h2 id="pictures">生活照</h2>
     <div><img width="400" src="1.jpg" alt="图一" /></div>
     <div><img width="400" src="2.jpg" alt="图二" /></div>
     <div><img width="400" src="3.jpg" alt="图三" /></div>
-    <h2>生平</h2>
+    <h2 id="life">生平</h2>
     <p>
       1998年，许巍结婚，妻子是其参军时期的战友。许巍坦言自己很多的创作灵感来自于他和妻子之间的感情，其第二张专辑《那一年》中的《故乡》和《温暖》两首歌都是写给妻子的
     </p>
