--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+      ,
+      minimum-scale="1.0,"
+      maximum-scale="1.0,"
+      user-scalable="no"
+    />
     <title>许巍</title>
     <style>
       img {
@@ -84,9 +91,21 @@
       </tbody>
     </table>
     <h2 id="pictures">生活照</h2>
-    <div><img width="400" src="1.jpg" alt="图一" /></div>
-    <div><img width="400" src="2.jpg" alt="图二" /></div>
-    <div><img width="400" src="3.jpg" alt="图三" /></div>
+    <div>
+      <a href="1.jpg" target="_blank"
+        ><img width="400" src="1.jpg" alt="图一"
+      /></a>
+    </div>
+    <div>
+      <a href="2.jpg" target="_blank"
+        ><img width="400" src="2.jpg" alt="图二"
+      /></a>
+    </div>
+    <div>
+      <a href="3.jpg" target="_blank"
+        ><img width="400" src="3.jpg" alt="图三"
+      /></a>
+    </div>
     <h2 id="life">生平</h2>
     <p>
       1998年，许巍结婚，妻子是其参军时期的战友。许巍坦言自己很多的创作灵感来自于他和妻子之间的感情，其第二张专辑《那一年》中的《故乡》和《温暖》两首歌都是写给妻子的
